# Algorytmy_projekt_3

./: CMakeLists.txt  ChessGame.h  Color.h  Logger.h  Move.h  main.cpp
src/: ChessGame.h  GameState.h  Move.h  Piece.h  PieceType.h  TranspositionEntry.h  main.cpp
